# ckb-script-ipc

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: Rust.yml  cargo-publish.yml
c/: Makefile  README.md  ckb-script-ipc.c  ckb-script-ipc.h  ckb_script_ipc.c  ckb_script_ipc.h
c/examples/: client.c  server.c
c/tests/: client.c  server.c
contracts/ckb-crypto-service/: Cargo.toml  README.md
contracts/ckb-crypto-service/src/: crypto_interface.rs  lib.rs  main.rs
contracts/ckb-script-ipc-demo/: Cargo.toml  README.md
contracts/ckb-script-ipc-demo/src/: client_entry.rs  def.rs  entry.rs  error.rs  server_entry.rs
contracts/unit-tests/: Cargo.toml  Makefile  README.md
contracts/unit-tests-crypto/: Cargo.toml  Makefile  README.md
contracts/unit-tests-crypto/src/: main.rs  unit_tests_crypto_def.rs
contracts/unit-tests/src/: client_entry.rs  def.rs  entry.rs  main.rs  server_entry.rs
crates/ckb-crypto-def/: Cargo.toml
crates/ckb-crypto-def/src/: lib.rs
crates/ckb-crypto-interface/: Cargo.toml  README.md
crates/ckb-crypto-interface/src/: lib.rs
crates/ckb-script-ipc/: Cargo.toml  README.md
crates/ckb-script-ipc-common/: Cargo.toml  README.md  build.rs
crates/ckb-script-ipc-common/src/: bufreader.rs  bufwriter.rs  channel.rs  error.rs  io.rs  io_impl.rs  ipc.rs  lib.rs  native.rs  packet.rs  pipe.rs  server.rs  spawn.rs  utils.rs  vlq.rs
crates/ckb-script-ipc/src/: lib.rs
crates/ckb-script-ipc/tests/: generate.rs
crates/unit-tests-def/: Cargo.toml  README.md
crates/unit-tests-def/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  service_def.rs  tests.rs  tests_c_impl.rs  tests_native.rs  tests_service.rs
