[workspace]
resolver = "2"

members = [ "crates/ckb-script-ipc", "crates/ckb-script-ipc-common",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/unit-tests-crypto",
  "contracts/ckb-crypto-service",
  "contracts/ckb-script-ipc-demo",
  "contracts/unit-tests",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1

# TODO This will be deleted after ckb-std is released
[replace]
"ckb-std:0.16.3" = { git = "https://github.com/nervosnetwork/ckb-std.git", rev = "42d6cea" }