[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.14"
serde_json = "1.0"
blake2b-ref = "0.3.1"
sha2 = "0.10.8"
ripemd = "0.1.3"
k256 = "0.13.4"
ed25519-dalek = "2.1.1"
ckb-script-ipc-common = { path = "../crates/ckb-script-ipc-common", features = ["std", "detect-asm"] }
unit-tests-def = { path = "../crates/unit-tests-def" }
env_logger = "0.11"
