[package]
name = "unit-tests"
version = "1.0.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic", "log"]}
ckb-script-ipc-common = { path = "../../crates/ckb-script-ipc-common" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
ckb-script-ipc = { path = "../../crates/ckb-script-ipc" }
serde_molecule = { version = "1.1.0", default-features = false, features = ["alloc"] }
