[package]
name = "ckb-script-ipc-common"
version = "1.0.0"
edition = "2021"
authors = ["Lyndon <lynndon@gmail.com>"]
license = "MIT"
repository = "https://github.com/xujiandong/ckb-script-ipc"
keywords = ["ipc", "ckb", "script"]
readme = "../../README.md"
description = "Common utilities for CKB Script IPC."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.16", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic"]}
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"]}
log = { version = "0.4", optional = true, default-features = false }
enumn = "0.1.14"
ckb-rust-std = { version = "1.0.0", features = ["rust_before_181"]}

[features]
default = []
enable-logging = ["log"]
