[package]
name = "ckb-script-ipc"
version = "1.0.0"
edition = "2021"
authors = ["Lyndon <lynndon@gmail.com>"]
license = "MIT"
repository = "https://github.com/xujiandong/ckb-script-ipc"
keywords = ["ipc", "ckb", "script"]
readme = "../../README.md"
description = "Proc macros for CKB Script IPC."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "1.0"
quote = { version ="1.0" }
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
ckb-script-ipc-common = { path = "../ckb-script-ipc-common" }
serde_molecule = { version = "1.1.0", default-features = false, features = ["alloc"] }
