[package]
name = "unit-tests-def"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-script-ipc-common = { path = "../../crates/ckb-script-ipc-common" }
ckb-script-ipc = { path = "../../crates/ckb-script-ipc" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "3.11.0", default-features = false, features = ["hex", "macros"] }
